--- a/01/theapp.html
+++ b/01/theapp.html
@@ -6,15 +6,24 @@
     <title>To-Do List</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica', serif;
+            margin: 20px;
         }
         .completed {
             text-decoration: line-through;
         }
-        li {
-            display: flex;
-            justify-content: space-between;
-            margin: 5px 0;
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 25px;
+        }
+        th, td {
+            border: 1px solid #000;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
         }
         button {
             margin-left: 10px;
@@ -27,7 +36,18 @@
         <input type="text" id="taskDescription" placeholder="New Task" required>
         <button type="submit">Add Task</button>
     </form>
-    <ul id="taskList"></ul>
+    <table id="taskTable">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Title</th>
+                <th>Completed</th>
+                <th>Date</th>
+                <th>Options</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
 
     <script>
         let tasks = [];
@@ -36,7 +56,8 @@
             let task = {
                 id: Date.now(),
                 description: description,
-                completed: false
+                completed: false,
+                date: new Date().toLocaleString()
             };
             return [...tasks, task];
         }
@@ -52,32 +73,24 @@
         }
 
         function displayTasks(tasks) {
-            const taskList = document.getElementById('taskList');
-            taskList.innerHTML = '';
-            tasks.forEach(task => {
-                const taskItem = document.createElement('li');
-                taskItem.textContent = task.description;
+            const taskTableBody = document.querySelector('#taskTable tbody');
+            taskTableBody.innerHTML = '';
+            tasks.forEach((task, index) => {
+                const taskRow = document.createElement('tr');
+                taskRow.innerHTML = `
+                    <td>${index + 1}</td>
+                    <td>${task.description}</td>
+                    <td>${task.completed ? '✔' : '✘'}</td>
+                    <td>${task.date}</td>
+                    <td>
+                        <button onclick="completeTask(${task.id})">Complete</button>
+                        <button onclick="deleteTask(${task.id})">Remove</button>
+                    </td>
+                `;
                 if (task.completed) {
-                    taskItem.classList.add('completed');
+                    taskRow.classList.add('completed');
                 }
-
-                const completeButton = document.createElement('button');
-                completeButton.textContent = 'Complete';
-                completeButton.onclick = () => {
-                    tasks = markTaskCompleted(tasks, task.id);
-                    displayTasks(tasks);
-                };
-
-                const removeButton = document.createElement('button');
-                removeButton.textContent = 'Remove';
-                removeButton.onclick = () => {
-                    tasks = removeTask(tasks, task.id);
-                    displayTasks(tasks);
-                };
-
-                taskItem.appendChild(completeButton);
-                taskItem.appendChild(removeButton);
-                taskList.appendChild(taskItem);
+                taskTableBody.appendChild(taskRow);
             });
         }
 
@@ -88,6 +101,17 @@
             displayTasks(tasks);
             document.getElementById('taskForm').reset();
         };
+
+        function completeTask(taskId) {
+            tasks = markTaskCompleted(tasks, taskId);
+            displayTasks(tasks);
+        }
+
+        function deleteTask(taskId) {
+            tasks = removeTask(tasks, taskId);
+            displayTasks(tasks);
+        }
     </script>
 </body>
 </html>
+
